RESOLVED FIXED 263951
[WebGPU] GPUShaderModule.getCompilationInfo crashes
https://bugs.webkit.org/show_bug.cgi?id=263951
Summary [WebGPU] GPUShaderModule.getCompilationInfo crashes
Mike Wyrzykowski
Reported 2023-10-30 23:01:35 PDT
[WebGPU] GPUShaderModule.getCompilationInfo crashes
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-30 23:01:53 PDT
Mike Wyrzykowski
Comment 2 2023-10-30 23:09:37 PDT
EWS
Comment 3 2023-10-31 10:51:52 PDT
Committed 270014@main (a59c221d09e9): <https://commits.webkit.org/270014@main> Reviewed commits have been landed. Closing PR #19761 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.